# react-pptx

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: README.md  bright-slides-align.md  config.json
.claude/: launch.json
.github/: release-bootstrap.json
.github/workflows/: ci.yml  powerpoint-oracle.yml  publish.yml
.powerpoint-oracle/: README.md  manifest.example.json
apps/playground/: index.html  package.json
apps/playground/src/: App.tsx  icons.tsx  styles.css
crates/pptx-core/: Cargo.toml
crates/pptx-core/src/: legacy.rs  lib.rs  model.rs  pptx.rs
crates/pptx-core/tests/: model_serialization.rs  ppt_legacy_fixture.rs  ppt_legacy_minimal.rs  pptx_minimal.rs  pptx_owned_features.rs  pptx_pretext_layout_fixture.rs  pptx_text_layout.rs
crates/pptx-wasm/: Cargo.toml
crates/pptx-wasm/src/: lib.rs
docs/: architecture.md  fidelity-harness.md  legacy-ppt.md  performance.md  releasing.md  security.md
patches/: emf-converter@1.5.0.patch
scripts/: generate-pretext-layout-fixture.mjs  generate-test-fixtures.mjs  verify-package.mjs
scripts/powerpoint-oracle/: capture-corpus.mjs  compare-corpus.mjs  contract.mjs  export-corpus.mjs  export_pptx_to_pdf.applescript  font-catalog.mjs  validate-manifest.mjs
tests/fidelity/: oracle-contract.test.mjs
tests/fixtures/: pretext-layout-cases.pptx
tests/fixtures/legacy/: README.md
tests/visual/: playground.spec.ts  pretext-layout.spec.ts
