[workspace]
members = ["crates/pptx-core", "crates/pptx-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
thiserror = "2"
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
cfb = "0.10"
flate2 = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
