[package]
name = "pptx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
zip.workspace = true
cfb.workspace = true
flate2.workspace = true

[dev-dependencies]
zip = { workspace = true }
