[package]
name = "pptx-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pptx-core = { path = "../pptx-core" }
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
